Opened 11 years ago
Closed 11 years ago
#10628 closed bug (fixed)
KDL: assert failed in scheduler code
Reported by: | jessicah | Owned by: | pdziepak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
ASSERT FAILED (headers/private/kernel/util/MinMaxHeap.h:198): fMaxLastElement == 1
What was doing at the time: dd if=/dev/zero of=/nfs_mount/be.img bs=1M count=16384 and configuring webkit build.
nfs_mount is using the older NFS fs, not NFS4.
Attachments (1)
Change History (3)
by , 11 years ago
Attachment: | 20140301_132436.jpg added |
---|
comment:1 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Should be fixed in hrev46999. Being caused by a race condition this assertion fail probably was not easy to reproduce (and verify that it is indeed fixed) so I am closing this ticket now, reopen if needed.
Note:
See TracTickets
for help on using tickets.
photo of KDL